import { SeasonPbId, SeasonDefinition, SeasonType } from "../mw-v2-protobufs/protofiles-out/manawave-types";


export const SEASON_ZERO_1_PBID: SeasonPbId = {
  seasonType: SeasonType.SeasonType_Playtest,
  seasonDefinition: SeasonDefinition.SeasonDef_Zero_1,
};


export const SEASON_DEV_1_PBID: SeasonPbId = {
  seasonType: SeasonType.SeasonType_Playtest,
  seasonDefinition: SeasonDefinition.SeasonDef_Zero_1,
};
